# llamecoders

./: .gitignore  README.md
docs/: getting-started.md
setup/: docker-compose.yaml  litellm-config.yaml  opencode.json
tools/costscraper/: AGENTS.md  litellm-config.yaml  pyproject.toml
tools/costscraper/docs/: SPEC.md
tools/costscraper/src/costscraper/: __init__.py  cli.py  config.py  mapping.py
tools/costscraper/src/costscraper/fetchers/: base.py  infomaniak.py
tools/costscraper/tests/: test_cli.py  test_config.py  test_infomaniak_fetcher.py
tools/costscraper/tests/fixtures/: infomaniak-pricing.html  sample-litellm-config.yaml
